Fix for long headers to now use an ellipsis on overflow.
Jira Issue DD-1362

--- a/css/common.scss
+++ b/css/common.scss
@@ -4,7 +4,11 @@ div.dtsp-topRow {
     flex-wrap: nowrap;
     justify-content: space-around;
     align-content: flex-start;
-    align-items: flex-start;
+	align-items: flex-start;
+	
+	input.dtsp-search{
+		text-overflow: ellipsis;
+	}
     div.dtsp-subRow1{
         display: flex;
         flex-direction: row;
